--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,15 +1,17 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Authorization
 @using TTAServer
-@model TTAServer.Models.LoginCredentials
+@model TTAServer.LoginCredentials
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @inject IAuthorizationService AuthorizationService
 
 <h2>Home Page</h2>
 
+@*Check if the user is authenticated*@
 @if (SignInManager.IsSignedIn(User))
 {
+    @*Check if the user meets the policy requirements*@
     @if ((await AuthorizationService.AuthorizeAsync(User, "P_TestController1")).Succeeded)
     {
         <div>
@@ -23,10 +25,17 @@
                 <button type="submit">Logout</button>
             </form>
         </div>
-        }
     }
     else
     {
+        <p>You are not authorized</p>
+        <form method="post" asp-action="Logout">
+            <button type="submit" class="btn btn-default">Logout</button>
+        </form>
+    }
+}
+else
+{
     <div>
         <p>Enter your name to log in:</p>
 
