--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,27 +12,32 @@
 @if (SignInManager.IsSignedIn(User))
 {
     @*Check if the user meets the policy requirements*@
-    @if ((await AuthorizationService.AuthorizeAsync(User, "P_TestController1")).Succeeded)
-    {
+    @*if ((await AuthorizationService.AuthorizeAsync(User, "MinimumAgeAuthorize(50)")).Succeeded)
+    {*@
         <div>
             <p>Hello, @User.Identity.Name</p>
 
             <p>
                 <a asp-action="Manage">Manage your account</a>
+
             </p>
+
+            <ul>
+                <li>@Html.ActionLink("Minimum Age 50", "MinimumAge50", "Home")</li>
+            </ul>
 
             <form method="post" asp-action="Logout">
                 <button type="submit">Logout</button>
             </form>
         </div>
-    }
+    @*}
     else
     {
         <p>You are not authorized</p>
         <form method="post" asp-action="Logout">
             <button type="submit" class="btn btn-default">Logout</button>
         </form>
-    }
+    }*@
 }
 else
 {
@@ -44,6 +49,7 @@ else
                 <label asp-for="MobileNo">Mobile No.</label>
                 <input asp-for="MobileNo" class="form-control" />
             </div>
+
             <div>
                 <label asp-for="Password">Password</label>
                 <input asp-for="Password" class="form-control" />
