--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,27 +14,34 @@
     @*Check if the user meets the policy requirements*@
     @*if ((await AuthorizationService.AuthorizeAsync(User, "MinimumAgeAuthorize(50)")).Succeeded)
     {*@
-        <div>
-            <p>Hello, @User.Identity.Name</p>
+<div>
+    <p>Hello, @User.Identity.Name</p>
 
-            @*<p>
-                <a asp-action="Manage">Manage your account</a>
+    @*<p>
+            <a asp-action="Manage">Manage your account</a>
 
-            </p>*@
+        </p>*@
 
-             <p>
-                <a asp-action="Controller1">Controller 1</a>
+    @*<p>
+            <a asp-action="Controller1">Controller 1</a>
+        </p>*@
 
-            </p>
+    <ul>
+        <li>@Html.ActionLink("Controller 1", "TC1Method1", "TestController1")</li>
+    </ul>
 
-            @*<ul>
-                <li>@Html.ActionLink("Minimum Age 50", "MinimumAge50", "Home")</li>
-            </ul>*@
+    @*<p>
+            <a asp-action="Controller2">Controller 2</a>
+        </p>*@
 
-            <form method="post" asp-action="Logout">
-                <button type="submit">Logout</button>
-            </form>
-        </div>
+    <ul>
+        <li>@Html.ActionLink("Controller 2", "TC2Method1", "TestController2")</li>
+    </ul>
+
+    <form method="post" asp-action="Logout">
+        <button type="submit">Logout</button>
+    </form>
+</div>
     @*}
     else
     {
