--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,73 +1,2 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using Microsoft.AspNetCore.Authorization
-@using TTAServer
-@model TTAServer.LoginCredentials
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
-@inject IAuthorizationService AuthorizationService
-
-<h2>Home Page</h2>
-
-@*Check if the user is authenticated*@
-@if (SignInManager.IsSignedIn(User))
-{
-    @*Check if the user meets the policy requirements*@
-    @*if ((await AuthorizationService.AuthorizeAsync(User, "MinimumAgeAuthorize(50)")).Succeeded)
-    {*@
-<div>
-    <p>Hello, @User.Identity.Name</p>
-
-    @*<p>
-            <a asp-action="Manage">Manage your account</a>
-
-        </p>*@
-
-    @*<p>
-            <a asp-action="Controller1">Controller 1</a>
-        </p>*@
-
-    <ul>
-        <li>@Html.ActionLink("Controller 1", "TC1Method1", "TestController1")</li>
-    </ul>
-
-    @*<p>
-            <a asp-action="Controller2">Controller 2</a>
-        </p>*@
-
-    <ul>
-        <li>@Html.ActionLink("Controller 2", "TC2Method1", "TestController2")</li>
-    </ul>
-
-    <form method="post" asp-action="Logout">
-        <button type="submit">Logout</button>
-    </form>
-</div>
-    @*}
-    else
-    {
-        <p>You are not authorized</p>
-        <form method="post" asp-action="Logout">
-            <button type="submit" class="btn btn-default">Logout</button>
-        </form>
-    }*@
-}
-else
-{
-    <div>
-        <p>Enter your name to log in:</p>
-
-        <form method="post" asp-action="Login">
-            <div>
-                <label asp-for="MobileNo">Mobile No.</label>
-                <input asp-for="MobileNo" class="form-control" />
-            </div>
-
-            <div>
-                <label asp-for="Password">Password</label>
-                <input asp-for="Password" class="form-control" />
-            </div>
-            <button type="submit" class="btn btn-default">Login</button>
-        </form>
-    </div>
-}
-
+﻿
+<h2>TTA Server is Live...</h2>
